fix: increase main padding for improved layout and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -284,7 +284,7 @@ body::before {
   z-index: 1;
 }
 main {
-  padding: 3rem 0;
+  padding: 7rem 0;
   flex: 1 0 auto;
   min-height: 0;
 }
